--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,3 +50,18 @@ body {
     text-wrap: balance;
   }
 }
+
+.flyout {
+  animation: fadeInUp 0.3s ease-in-out;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 10px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
